// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Validation utils Conditional Validators validates axis schema with optional min/max 1`] = `
[
  ValidationError {
    "message": "Option \`max\` cannot be set to \`"100"\`; expecting a number and the value to be greater than \`min\`, ignoring.",
    "path": "",
    "required": undefined,
    "unknown": undefined,
  },
]
`;

exports[`Validation utils Utility Functions attachDescription adds a description to a validator 1`] = `
[
  ValidationError {
    "message": "Option \`str\` cannot be set to \`""\`; expecting a non-empty string, ignoring.",
    "path": "",
    "required": undefined,
    "unknown": undefined,
  },
]
`;

exports[`Validation utils Validate Method nested validations returns all levels of validation errors 1`] = `
{
  "cleared": {
    "employees": [
      "John Doe",
      {
        "age": 30,
        "employers": [
          {
            "department": "b",
            "name": "Dave",
          },
          {
            "department": "c",
            "name": "John",
          },
        ],
        "name": "John Doe",
        "salaries": [
          10000,
          22000,
          45000,
        ],
      },
    ],
  },
  "invalid": [
    ValidationError {
      "message": "Unknown option \`employees[1].position\`, ignoring.",
      "path": "employees[1]",
      "required": undefined,
      "unknown": true,
    },
  ],
}
`;

exports[`Validation utils Validate Method nested validations returns all levels of validation errors 2`] = `
{
  "cleared": {},
  "invalid": [
    ValidationError {
      "message": "Option \`employees\` cannot be set to \`[1337,{"age":30,"position":"NA","salaries":[10000,... (+103 characters)\`; expecting a string or person details array and an array of at least 1 items, ignoring.",
      "path": "",
      "required": undefined,
      "unknown": undefined,
    },
  ],
}
`;

exports[`Validation utils Validate Method nested validations returns all levels of validation errors 3`] = `
{
  "cleared": {},
  "invalid": [
    ValidationError {
      "message": "Option \`employees\` cannot be set to \`[]\`; expecting a string or person details array and an array of at least 1 items, ignoring.",
      "path": "",
      "required": undefined,
      "unknown": undefined,
    },
  ],
}
`;

exports[`Validation utils Validate Method validate returns expected validated object and errors 1`] = `
[
  ValidationError {
    "message": "Option \`name\` is required and has not been provided; expecting a string, ignoring.",
    "path": "",
    "required": true,
    "unknown": undefined,
  },
  ValidationError {
    "message": "Option \`age\` cannot be set to \`-5\`; expecting a number greater than or equal to 0, ignoring.",
    "path": "",
    "required": undefined,
    "unknown": undefined,
  },
  ValidationError {
    "message": "Option \`hobbies\` cannot be set to \`["reading",123]\`; expecting a string array, ignoring.",
    "path": "",
    "required": undefined,
    "unknown": undefined,
  },
  ValidationError {
    "message": "Unknown option \`extraField\`, ignoring.",
    "path": "",
    "required": undefined,
    "unknown": true,
  },
  ValidationError {
    "message": "Unknown option \`typo\`; Did you mean \`type\`? Ignoring.",
    "path": "",
    "required": undefined,
    "unknown": true,
  },
]
`;
